SERVER-26440 Validate namespace in DistinctCmd::explain